@@ -68,6 +68,7 @@ if (isset($uuid) && (FALSE !== ($cnid = array_search_ex($uuid, $a_volume, "uuid"
 	$pconfig['volsize'] = $a_volume[$cnid]['volsize'];
 	$pconfig['compression'] = $a_volume[$cnid]['compression'];
 	$pconfig['dedup'] = $a_volume[$cnid]['dedup'];
+	$pconfig['sync'] = $a_volume[$cnid]['sync'];
 	$pconfig['desc'] = $a_volume[$cnid]['desc'];
 } else {
 	$pconfig['uuid'] = uuid();
@@ -76,10 +77,8 @@ if (isset($uuid) && (FALSE !== ($cnid = array_search_ex($uuid, $a_volume, "uuid"
 	$pconfig['compression'] = "off";
 	$pconfig['volsize'] = "";
 	$pconfig['dedup'] = "off";
+	$pconfig['sync'] = "standard";
 	$pconfig['desc'] = "";
-}
-if ($pconfig['dedup'] == "") {
-	$pconfig['dedup'] = "off";
 }
 
 if ($_POST) {
@@ -107,6 +106,7 @@ if ($_POST) {
 		$volume['volsize'] = $_POST['volsize'];
 		$volume['compression'] = $_POST['compression'];
 		$volume['dedup'] = $_POST['dedup'];
+		$volume['sync'] = $_POST['sync'];
 		$volume['desc'] = $_POST['desc'];
 
 		if (isset($uuid) && (FALSE !== $cnid)) {
@@ -169,6 +169,8 @@ function enable_change(enable_change) {
 					<?php html_combobox("compression", gettext("Compression"), $pconfig['compression'], $a_compressionmode, gettext("Controls the compression algorithm used for this volume. The 'lzjb' compression algorithm is optimized for performance while providing decent data compression. Setting compression to 'On' uses the 'lzjb' compression algorithm. You can specify the 'gzip' level by using the value 'gzip-N', where N is an integer from 1 (fastest) to 9 (best compression ratio). Currently, 'gzip' is equivalent to 'gzip-6'."), true);?>
 					<?php $a_dedup = array("on" => gettext("On"), "off" => gettext("Off"), "verify" => "verify", "sha256" => "sha256", "sha256,verify" => "sha256,verify"); ?>
 					<?php html_combobox("dedup", gettext("Dedup"), $pconfig['dedup'], $a_dedup, gettext("Controls the dedup method. <br><b><font color='red'>NOTE/WARNING</font>: See <a href='http://wiki.nas4free.org/doku.php?id=documentation:setup_and_user_guide:disks-zfs-volumes-volume' target='_blank'>ZFS volumes & deduplication</a> wiki article BEFORE using this feature.</b></br>"), true);?>
+					<?php $a_sync = array("standard" => "standard", "always" => "always", "disabled" => "disabled"); ?>
+					<?php html_combobox("sync", gettext("Sync"), $pconfig['sync'], $a_sync, gettext("Controls the behavior of synchronous requests."), true);?>
 					<?php html_inputbox("desc", gettext("Description"), $pconfig['desc'], gettext("You may enter a description here for your reference."), false, 40);?>
 				</table>
 				<div id="submit">
